# live-cx-agent

./: .env  .env.example  .gitignore  README.md  inspect_sdk.py  pyproject.toml  requirements.txt
agent/: agent.py  agent_monitor.py  deploy.py  deploy_agent_engine.py  requirements.txt  runner.py
deploy/: deploy.py  test.py  update.py
terraform/: backend.tf  buckets.tf  provider.tf  pubsub.tf  variables.tf
